# obj_raytracer

./: CMakeLists.txt  OUT.ppm  obj_raytracer.code-workspace  render.1001.ppm  render.1002.ppm  render.1003.ppm  render.1004.ppm  render.1005.ppm
cmake/: FindGLM.cmake
src/: camera.cpp  camera.hpp  main.cpp  math.cpp  math.hpp  scene.cpp  scene.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp  trianglemesh.cpp  trianglemesh.hpp  vec3.h
